Changes for 1.0.3.4

* Fix bug 2804677 Retreating into enemy spaces (sgb)

* Add menu to change look and feel (sgb)

* Fix bug 2799810  Admin right-click menu (sgb)

* Fig bug 2801742 Rockets throw error in NWO (sgb)

* Fix bug 2801740 java error in every roll in a PBEM game. (sgb)

* Fixed not being able to place bid units at non-factories (ComradeKev)

* Fix bug 2675636 Crash when ignoring enemy units (ComradeKev)

* Fix bug 2779955 Cause battle when new/ignored units are in contested zones (ComradeKev)

* Minor change to the Strong AI calculation of the strength of sea units near a territory (Kevin Moore)

* Fixed the connections or E/W Romania in NWO9 (ComradeKev)

* Added name_place.txt for NWO (ComradeKev)

* Updated rockets.png for Russians in NWO (ComradeKev)

* Fixed some connections in Europe.xml (ComradeKev)

* Added name_place.txt for Europe (ComradeKev)

* Fixed neutrals not able to be captured after a failed attempt (ComradeKev)

Changes for 1.0.3.3

* put game name in window title (sgb)

* fix bug 2753571 - Unloaded cargo not being removed when transport sinks, also odds calculator fails with transports in revised (sgb,  gruetzdark)

* fix bug 2779959 - AA50: Stay in the Mobilization Zone (sgb)

* fail when loading game where xml case and file name case differs (sgb)

* fix map name/unit case in nwo maps (sgb)

* mark territories with battles (sgb)

* Make it so map utility programs can find the centers, polygons, and map.properties files by using the
  path of the map's image file. (Stephen Wicklund)
  
* Make it so the user can specify the unit's scale when using the 'Auto Placement Finder' utility.(Stephen Wicklund)

* add a setting to "Lock" the map, so you can observe a game without the map moving all around (Stephen Wicklund)

* add  a setting to suppress the showing of battles between two AIs (Stephen Wicklund)

* add a setting to choose how long the AI pauses between each movement (Stephen Wicklund)

* add a better ai (Kevin Moore)
